# barqly-vault

./: .clippy.toml  .cursorindexingignore  .cursorrules  .editorconfig  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  DOCUMENTATION-CLEANUP-SUMMARY.md  ENCRYPTION_UI_POLISH_SUMMARY.md  LICENSE  Makefile  README.md  SECURITY.md  YUBIKEY-DEV-SETUP.md  context.md  entitlements-ykman.plist  final_fix.py  mkdocs.yml  package-lock.json  package.json  project-plan.md  requirements.txt  temp_test  test-landing.html  test-output.txt
poc/pty-yubikey-test/: Cargo.toml  README.md  cg14.md  ph1.1.logs  ph1.2.logs  ph1.3.logs  ph1.4.logs  ykman-final.logs  ykman-test.logs
poc/pty-yubikey-test/src/: main.rs
poc/yubikey-apdu-poc/: APDU_SPEC.md  Cargo.toml  FINDINGS.md  README.md  SOLUTION.md  issue-age-plugin.md  issue-update.md  issue.md  issue1-age-plugin.md  issue2-age-plugin.md
poc/yubikey-apdu-poc/src/: apdu.rs  hybrid.rs  lib.rs  main.rs
poc/yubikey-ykman-poc/: .gitignore  Cargo.toml  README.md  SECURITY.md  test-message.txt  yubikey-manifest.json
poc/yubikey-ykman-poc/scripts/: build-ykman.sh
poc/yubikey-ykman-poc/src/: age_crate.rs  errors.rs  lib.rs  logger.rs  main.rs  manifest.rs  pty.rs  pty_decrypt.rs  ykman.rs  ykman_pty.rs
src-tauri/: .cursorrules  .taurignore  Cargo.toml  Info.plist  barqly-vault.desktop  build.rs  deb-control.template  entitlements-minimal.plist  entitlements.plist  generate-bindings.rs  tauri.conf.json  tauri.prod.conf.json  tauri.uat.conf.json
src-tauri/docs/engineering/refactoring/: todo-audit-2025-10-02.md
src-tauri/examples/: cache_performance_test.rs  clean_keys.rs  dev_reset.rs  generate_dev_keys.rs
src-tauri/icons/: icon.icns
src-tauri/scripts/: generate-param-map
src-tauri/src/: constants.rs  lib.rs  main.rs  prelude.rs
src-tauri/src/commands/: crypto_commands.rs  file_commands.rs  mod.rs  storage_commands.rs  types.rs  unified_key_commands.rs  vault_yubikey_commands.rs  vault_yubikey_helpers.rs  yubikey_crypto_commands.rs  yubikey_device_commands.rs
src-tauri/src/commands/command_types/: error.rs  error_code.rs  error_handler.rs  error_recovery.rs  mod.rs  progress.rs  progress_manager.rs  validation.rs
src-tauri/src/commands/crypto/: decryption.rs  encryption.rs  file_helpers.rs  key_generation.rs  key_generation_multi.rs  manifest.rs  mod.rs  passphrase_validation.rs  passphrase_validation_tests.rs  progress.rs  validation.rs  vault_analysis.rs
src-tauri/src/commands/file/: manifest.rs  mod.rs  selection.rs
src-tauri/src/commands/file_commands/: helpers.rs  manifest.rs  mod.rs  selection.rs
src-tauri/src/commands/key_management/: add_recipient.rs  attach_key.rs  deactivate_key.rs  delete_key.rs  export_key.rs  import_key.rs  key_menu_commands.rs  mod.rs  restore_key.rs  unified_keys.rs  update_global_key_label.rs
src-tauri/src/commands/passphrase/: generation_commands.rs  mod.rs  validation_commands.rs  vault_commands.rs
src-tauri/src/commands/storage/: mod.rs
src-tauri/src/commands/vault/: key_management.rs  key_operations.rs  mod.rs  statistics.rs  vault_management.rs  yubikey_integration_tests.rs
src-tauri/src/commands/vault_commands/: key_management.rs  key_operations.rs  mod.rs  passphrase_integration.rs  passphrase_integration_tests.rs  vault_management.rs  yubikey_integration.rs  yubikey_integration_tests.rs
src-tauri/src/commands/yubikey/: crypto_commands.rs  device_commands.rs  vault_commands.rs
src-tauri/src/commands/yubikey_commands/: device_management.rs  hardware_test.rs  initialization.rs  mod.rs  smart_decryption.rs  streamlined.rs  test_generate_key_multi.rs  test_streamlined_api.rs
src-tauri/src/crypto/: age_ops.rs  errors.rs  key_mgmt.rs  mod.rs  multi_recipient.rs
src-tauri/src/crypto/yubikey/: age_plugin.rs  detection.rs  errors.rs  management.rs  manifest.rs  mod.rs  plugin.rs  progress.rs  provider.rs  state_cache.rs
src-tauri/src/error/: handler.rs  mod.rs  storage.rs  universal.rs
src-tauri/src/examples/: secure_logging_example.rs
src-tauri/src/file_ops/: archive.rs  errors.rs  external_manifest.rs  manifest.rs  mod.rs  selection.rs  staging.rs  validation.rs
src-tauri/src/file_ops/archive_manifest/: mod.rs  operations.rs  types.rs  verification.rs
src-tauri/src/file_ops/archive_operations/: creation.rs  extraction.rs  mod.rs
src-tauri/src/key_management/: mod.rs
src-tauri/src/key_management/passphrase/: mod.rs
src-tauri/src/key_management/shared/: mod.rs  registry.rs  traits.rs
src-tauri/src/key_management/yubikey/: errors.rs  factory.rs  manager.rs  mod.rs  state.rs
src-tauri/src/logging/: formatter.rs  logger.rs  mod.rs  platform.rs  redaction.rs
src-tauri/src/models/: key_reference.rs  mod.rs  vault.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/crypto/: mod.rs
src-tauri/src/services/file/: mod.rs
src-tauri/src/services/key_management/: mod.rs
src-tauri/src/services/shared/: mod.rs  registry.rs  traits.rs
src-tauri/src/services/storage/: mod.rs
src-tauri/src/storage/: cache.rs  errors.rs  key_registry.rs  key_store.rs  metadata.rs  metadata_v2.rs  mod.rs  paths.rs
src-tauri/src/tracing_setup/: formatter.rs  mod.rs  redaction.rs
src-tauri/src/types/: error_code.rs  error_recovery.rs  mod.rs  validation.rs
src-tauri/tests/: file_ops_integration_tests.rs  logging_integration_tests.rs  mod.rs  storage_integration.rs  unit_tests.rs  yubikey_function_baseline.rs
src-tauri/tests/common/: cleanup.rs  fixtures.rs  helpers.rs  mod.rs
src-tauri/tests/integration/: DECRYPT_TESTS_TODO.md  crypto_integration_tests.rs  decrypt_directory_tests.rs  decryption_integration_tests.rs  encryption_integration_tests.rs  file_ops_integration_tests.rs  logging_integration_tests.rs  mod.rs  output_path_integration_tests.rs  storage_integration_tests.rs  task_3_3_integration_tests.rs  workflows.rs
src-tauri/tests/performance/: encryption_size_test.rs
src-tauri/tests/smoke/: deployment_smoke_tests.rs  mod.rs
src-tauri/tests/test_runner/: mod.rs
src-tauri/tests/unit/: mod.rs
(+1180 files in other folders)
