[workspace]
members = [ "poc/yubikey-apdu-poc","src-tauri"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies that can be used across Rust crates
# Add common dependencies here when we have multiple crates

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Barqly Team"]
description = "Secure backup and restore for sensitive data & documents"
license = "MIT"
repository = "https://github.com/barqly/barqly-vault" 
