[workspace]
members = ["src-tauri"]
exclude = ["poc/yubikey-apdu-poc", "poc/yubikey-ykman-poc"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies that can be used across Rust crates
# Add common dependencies here when we have multiple crates

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Barqly Team"]
description = "Secure backup and restore for sensitive data & documents"
license = "MIT"
repository = "https://github.com/barqly/barqly-vault" 
