[package]
name = "barqly-vault"
version = "0.1.0"
description = "Secure file encryption for Bitcoin custody"
authors = ["Barqly Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "barqly_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
directories = "5.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
# Crypto module dependencies
age = "0.10"
secrecy = "0.8"
zeroize = "1.8"
thiserror = "1.0"
rand = "0.8"
# File operations dependencies
tar = "0.4"
flate2 = "1.0"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.8"
tracing = "0.1"

[dev-dependencies]
serial_test = "2.0"
rand = "0.8"

