[package]
name = "barqly-vault"
version = "0.1.0"
description = "Secure backup and restore for sensitive data & documents"
authors = ["Barqly Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "barqly_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies]
log = "0.4"
directories = "5.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Modern type-safe TypeScript generation
specta = { version = "2.0.0-rc.20", features = ["chrono"] }
specta-typescript = "0.0.7"
tauri-specta = { version = "2.0.0-rc.20", features = ["typescript"] }
# Fix PATH inheritance for GUI apps (needed for age-plugin-yubikey)
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4"] }
# Crypto module dependencies
age = { version = "0.11.1", features = ["plugin", "async"] }
secrecy = { version = "0.10.3", features = ["serde"] }
zeroize = "1.8"
thiserror = "1.0"
rand = "0.8"
bs58 = "0.5"
# Enhanced crypto support - keeping p256 for future direct integration option
p256 = "0.13"
# YubiKey PIV operations for initialization and default-fixing flows
yubikey = { version = "0.8", features = ["untested"] }
# Process management for plugin execution
tokio = { version = "1.0", features = ["process", "io-util", "fs", "time", "macros"] }
futures = "0.3"
async-trait = "0.1"
# PTY support for interactive CLI tools
portable-pty = "0.9"
# Unix-specific features for PTY operations
nix = { version = "0.30.1", features = ["term", "poll"] }
# Testing utilities
lazy_static = "1.4"
# File operations dependencies
tar = "0.4"
flate2 = "1.0"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.8"
tracing = "0.1"
tauri-plugin-dialog = "2.3.1"
# Caching dependency
lru = "0.12"

[dev-dependencies]
serial_test = "2.0"
rand = "0.8"
# Test framework dependencies
rstest = "0.18"
mockall = "0.12"
assert2 = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3.4"
tokio-test = "0.4"

