[package]
name = "yubikey-apdu-poc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
yubikey = { version = "0.8", features = ["untested"] }
pcsc = "2.9"
anyhow = "1.0"
hex = "0.4"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
des = "0.8"
aes = "0.8"
cipher = "0.4"
portable-pty = "0.8"
nix = { version = "0.27", features = ["term"] }
once_cell = "1.19"

[[bin]]
name = "test-apdu"
path = "src/main.rs"
