[package]
name = "yubikey-ykman-poc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "yubikey-setup"
path = "src/main.rs"

[dependencies]
age = { version = "0.11.1", features = ["plugin", "async"] }
portable-pty = "0.9"
nix = { version = "0.30.1", features = ["term", "poll"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"
env_logger = "0.11.8"
thiserror = "2.0.16"
